--- a/public/templates/blog-template.html
+++ b/public/templates/blog-template.html
@@ -6,5 +6,5 @@
 	<h2><%= title %></h2>
 	<h3><%= subtitle %></h2>
 	<p><%= preview %></p>
-	<a class="go" href="#<%= id %>"><%= cta %></a>
+	<a class="go" href="#<%= _id %>"><%= cta %></a>
 </div>
