--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,12 +10,14 @@ div, ul, li, h1, h2, h3, p{
 	box-sizing:border-box;
 }
 
-a{
+a,
+button{
 	color:#444;
 	text-decoration:none;
 	border-bottom:1px dotted #444;
 	line-height:1.4;
 	font-weight:bold;
+	outline:none;
 }
 
 h1,h2,h3{
@@ -39,6 +41,9 @@ p{
 	font-size:16px;
 	line-height:1.4;
 	margin-top:8px;
+}
+input{
+	margin-bottom:20px;
 }
 .header{
 	width:100%;
@@ -165,7 +170,9 @@ p{
 	color:white;
 	background-color:#444;
 	text-align:center;
-	max-width:200px;
+	width:200px;
+	outline:none;
+	border:0;
 }
 
 .detail-content{
