--- a/public/templates/new-post.html
+++ b/public/templates/new-post.html
@@ -1,9 +1,9 @@
 <form>
 	<label>Title</label></br>
-	<input type="text" placeholder="Title" /></br>
+	<input name="title" type="text" placeholder="Title" /></br>
 
 	<label>Subtitle</label></br>
-	<input type="text" placeholder="Subtitle" /></br>
+	<input name="subtitle" type="text" placeholder="Subtitle" /></br>
 
 	<label>Main Image (url)</label></br>
 	<input type="text" placeholder="640px width" /></br>
